# deliveries/http/handlers/user/user_request.go
@@ -1,0 +1,5 @@
+package handlers
+
+type UserCreateRequest struct {
+	Pubkey string `json:"pubKey"                    validate:"required"`
+}
