# deliveries/http/http_handlers.go
@@ -1,7 +1,9 @@
 package http
 
 import (
-	handlers "github.com/dezh-tech/panda/deliveries/http/handlers/domain"
+	domainHandlers "github.com/dezh-tech/panda/deliveries/http/handlers/domain"
+	userHandlers "github.com/dezh-tech/panda/deliveries/http/handlers/user"
+	identifierHandlers "github.com/dezh-tech/panda/deliveries/http/handlers/identifier"
 	_ "github.com/dezh-tech/panda/docs" // revive:disable-line:blank-imports Justification: Required for Swagger documentation
 	"github.com/labstack/echo/v4"
 	echoSwagger "github.com/swaggo/echo-swagger"
@@ -23,11 +25,15 @@ import (
 // @BasePath /
 
 type Handlers struct {
-	domain handlers.Domain
+	domain domainHandlers.Domain
+	user userHandlers.User
+	identifier identifierHandlers.Identifier
 }
 
 func (h *Handlers) Start(r *echo.Echo) {
 	h.domain.SetDomainRoutes(r)
+	h.user.SetUserRoutes(r)
+	h.identifier.SetIdentifierRoutes(r)
 
 	r.GET("/swagger/*", echoSwagger.WrapHandler)
 }
